# financial-rag

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
finrag/: bot.py  chat.py  config.py  embedder.py  prompts.py
