[project]
name = "financial-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cryptg>=0.5.0.post0",
    "jq>=1.8.0",
    "langchain>=0.3.13",
    "langchain-chroma>=0.1.4",
    "langchain-community>=0.3.13",
    "langchain-huggingface>=0.1.2",
    "langchain-openai>=0.2.14",
    "langchain-text-splitters>=0.3.4",
    "langgraph>=0.2.60",
    "loguru>=0.7.3",
    "pandas>=2.2.3",
    "pydantic-settings>=2.7.0",
    "sentence-transformers>=3.3.1",
    "telethon>=1.38.1",
]

[dependency-groups]
dev = [
    "ruff>=0.8.4",
]
